project/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: maksonik/sfm
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          command:
            - gunicorn
            - sfm.core.main:app
            - --workers=4
            - --worker-class=uvicorn.workers.UvicornWorker
            - --bind=0.0.0.0:8000
            - --log-level=INFO
            - --access-logfile=-
          livenessProbe:
            httpGet:
              path: /v1/healthcheck
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 20
            failureThreshold: 2
          volumeMounts:
            - name: logs
              mountPath: /var/log/myapp
      volumes:
        - name: logs
          emptyDir: {}
